@@ -26,6 +26,7 @@ NEW: TWizard control (Qiang)
 NEW: TVarDumper and PradoBase::varDump() (Qiang)
 NEW: TComponentReflection (Qiang)
 NEW: TParameterModule (Qiang)
+NEW: TPropelLogRoute (Jason)
 
 Version 3.0b March 6, 2006
 ==========================
